# Unified-Studio-for-Amazon-Sagemaker

./: .gitignore  BUNDLE-REFACTORING-COMPLETE.md  PROGRESS.md  README.md  ROOT_CAUSE_ANALYSIS.md  WORKFLOWS_SERVERLESS_IMPLEMENTATION.md  glue_covid_summary_job.py  glue_s3_list_job.py  integration-test-analysis.md  integration_test_report.xml  payload.json  q-refactor.txt  q-task-build-ml-workflow.txt  q-task-examples.txt  q-task-workflow.txt  test_add_admin_member.py  test_admin_role.py  test_create_group.py  test_create_new_group.py  test_owners_assertion.py  test_role_retrieval.py
experimental/SMUS-CICD-pipeline-cli/: .coveragerc  .gitignore  AmazonQ.md  CHANGELOG.md  CODE_REUSE_COMPARISON.md  DEVELOPMENT.md  DIRECT-BRANCH-DEPLOYMENT.md  FAILING_TESTS_ANALYSIS.md  FIXES_APPLIED.md  HELPER_REFACTORING_PLAN.md  INTEGRATION_FIXES_SUMMARY.md  INTEGRATION_TEST_FAILURES.md  INTEGRATION_TEST_FIXES.md  LICENSE  MANIFEST.in  Makefile  NEXT_PHASE_CONTEXT.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  Q-connection.txt  QUICKSIGHT_CONFIG_MIGRATION.md  README.md  README.new.md  README.pt-BR.md  REFACTORING_COMPLETE.md  REFACTORING_PROGRESS.md  ROLE_MANAGEMENT_FEATURE.md  TEST_FAILURE_ANALYSIS.md  TEST_FAILURE_ANALYSIS_PHASE2.md  TEST_FAILURE_SUMMARY.md  TEST_FIX_SUMMARY.md  UNIT_TEST_FIXES.md  bandit-report.json  bootstrapexamplescript.sh  ci-fixes-summary.md  cleanup.py  code-assist-script.md  create_pdf.py  create_pdf_simple.py  create_pdf_with_diagrams.py  (+35 more)
experimental/SMUS-CICD-pipeline-cli/.github/: verify_notebook.py
experimental/SMUS-CICD-pipeline-cli/.recovery-backup/: RECOVERY-PLAN.md  integrate.py  pipeline-manifest-schema.yaml  run_mcp_server.sh
experimental/SMUS-CICD-pipeline-cli/developer/: AmazonQ.md  developer-guide.md
experimental/SMUS-CICD-pipeline-cli/doc/: conf.py  index.rst
experimental/SMUS-CICD-pipeline-cli/docs/: LINK-FIXES.md  Q_CLI_CONVERSATION_EXAMPLES.md  airflow-aws-operators.md  bootstrap-actions.md  bundle-manifest.md  cli-commands.md  cli-commands.md.backup  connections.md  development.md  examples-guide.md  generate-pdfs.sh  github-actions-integration.md  github-workflow-application-guide.md  github-workflow-devops-guide.md  manifest-schema.md  manifest.md  mcp-configuration.md  pipeline-architecture-diagram.md  pipeline-deployment-metrics.md  pipeline-manifest-schema.md  pipeline-manifest.md  pypi-publishing.md  q-cli-conversation-examples.md  quicksight-deployment.md  substitutions-and-variables.md
experimental/SMUS-CICD-pipeline-cli/examples/: CLEANUP.md  DemoMarketingBundle.yaml  DemoMarketingPipeline.yaml  DemoMarketingPipeline.yaml.bak  README-Examples.md  README.md  TestBundle.yaml  TestPipeline.yaml  cleanup-demo-resources.sh  demo-bundle.yaml  demo-manifest.yaml  demo-pipeline.yaml  environment-variables-example.yaml  full-pipeline-lifecycle.sh  manifest-with-role-policies.yaml  quicksight-bootstrap-example.yaml  workflow-bootstrap-example.yaml
experimental/SMUS-CICD-pipeline-cli/git-templates/: README.md  deploy-example.yml  smus-deploy-reusable.yml  smus-multi-env-reusable.yml
experimental/SMUS-CICD-pipeline-cli/kb/: IMPLEMENTATION_STATUS.md  README.md  kb-config.yaml  sync-public-kb.sh
experimental/SMUS-CICD-pipeline-cli/q-task/: q-github-workflows.txt
experimental/SMUS-CICD-pipeline-cli/q-tasks/: refactor-manifest.txt
experimental/SMUS-CICD-pipeline-cli/reports/: pytest_report.html  test_summary_report.md
experimental/SMUS-CICD-pipeline-cli/scripts/: get-workflow-logs.sh  run_tests.py  translate-docs.sh  translate-readme-batch.py  translate-readme-chunked.py  trigger-workflows.sh
experimental/SMUS-CICD-pipeline-cli/setup/: README.md  add-agent-passrole-policy.sh  add-bedrock-invoke-policy.sh
experimental/SMUS-CICD-pipeline-cli/test/: README.md  test_smus_cicd_pipeline_cli.py
experimental/SMUS-CICD-pipeline-cli/tests/: QUICKSIGHT_FIX_SUMMARY.md  README.md  __init__.py  cleanup_quicksight.py  debug_deployment.sh  env-example.env  env_validator.py  quick_table_test.py  quicksight_test_results.md  quicksight_testing_plan.md  requirements.txt  run_deploy_test.sh  run_tests.py  test_config.py  test_context_resolver_iam_role.py  (+9 more)
(+1227 files in other folders)
